--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    background-color: rgba(184, 192, 184, 0.4);
+    background-color: black;
     border: 3px solid transparent;
     padding: 7px 20px;
     border-radius: 25px;
@@ -129,7 +129,7 @@ nav ul.active {
 .hero-content {
     font-family: "Architects Daughter", sans-serif;
     font-size: 3vh;
-    margin-top: 30vh;
+    margin-top: 34vh;
     position: relative;
     z-index: 2;
 }
@@ -327,12 +327,32 @@ body.day .hehe > span {
     .sign-in {
         margin-top: 10px;
     }
+
+    header {
+        padding: 12px;
+    }
 }
 
 @media (max-width: 700px) {
-    nav ul {
+    body.night nav ul {
         display: none;
         background-color: rgba(44,62,80,0.9);
+        text-align: center;
+        color: var(--night-sky);
+        border-radius: 20px;
+        margin-top: 5px;
+        width: 18vh;
+        position: absolute;
+        overflow: hidden;
+        right: 0px;
+        transform: translateX(15px);
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.09);
+        z-index: 1;
+    }
+
+    body.day nav ul {
+        background-color: rgba(167,214,220,0.75);
+        display: none;
         text-align: center;
         color: var(--night-sky);
         border-radius: 20px;
@@ -415,7 +435,7 @@ body.night .stars {
     right: 0;
     bottom: 0;
     width: 100%;
-    height: 84%;
+    height: 50%;
     display: block;
     background: url('http://www.script-tutorials.com/demos/360/images/stars.png') repeat top center;
 }
@@ -446,9 +466,9 @@ body.night nav ul li a {
 }
 
 body.day nav ul li a {
-    background-color: var(--moon-color);
-    border-radius: 25px;
-    color: var(--main-blue);
+    background-color: rgba(167,214,220,0.75);
+    border-radius: 15px;
+    color: var(--main-white);
 }
 
 body.night nav ul li a:hover {
@@ -457,12 +477,13 @@ body.night nav ul li a:hover {
 }
 
 body.day nav ul li a:hover {
-    background-color: rgba(167,214,220,0.9) ;
-    color: var(--main-white);
+    background-color: var(--moon-color);
+    color: var(--main-blue);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.09);
 }
 
 body.night nav ul {
+    background-color: var(--night-sky);
     margin-bottom: 10px;
 }
 
@@ -474,7 +495,7 @@ body.day nav ul {
     width: 7px;
     height: 7px;
     border-radius: 10% transparent;
-    background-color: var(--main-white);
+    background-color: var(--main-green);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.7);
 }
 
