--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,21 @@ body.day .hero-content > p {
     z-index: 2;
 }
 
+@keyframes bg-dynamic {
+    0% {
+        background: linear-gradient(120deg, #3299cc, #333333) ;
+    }
+    50% {
+        background: linear-gradient(120deg, #1c5f81, #332b2b) ;
+    }
+    100% {
+        background: linear-gradient(120deg, #3bbeff, #292020) ;
+    }
+    150% {
+        background: linear-gradient(120deg, #1c5f81, #332b2b) ;
+    }
+}
+
 @keyframes float {
     0% {
         transform: translateX(-80%);
@@ -668,7 +683,7 @@ body.day .button-courses:hover {
 }
 
 .games {
-    background: linear-gradient(120deg, #3299cc, #333333) ;
+    animation: bg-dynamic 5s infinite linear;
     border-top: 3px solid var(--moon-color);
     color: var(--moon-color);
     margin: 0;
@@ -774,17 +789,12 @@ a:visited {
 .box {
     height: 220px;
     width: 220px;
-    margin: 20px;
     display: inline-block;
-    justify-content: center;
-    align-items: center;
+    align-self: center;
     background-color: green;
     box-shadow: 0px 7px 15px rgba(0, 0, 0, 0.7);
     border: 2px solid white;
     border-radius: 15px ; 
-    font-size: 10vh;
-    text-align: center;
-    padding-top: 40px;
 }
 
 .box:hover {
