--- a/styles.css
+++ b/styles.css
@@ -32,20 +32,31 @@ body.day {
 }
 
 header {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
     background-color: rgba(44,62,80,0.2);
     border-bottom: 2px solid var(--main-white);
-    position: sticky;
-    top: 0;
     z-index: 100;
+}
+
+body.day, body.night header {
+    position: sticky;
+}
+
+html, body {
+    overflow-x: hidden;
 }
 
 body.night header {
     background-color: rgba(44,62,80,0.9);
     top: 0;
+    position: sticky;
 }
 
 body.day header {
@@ -81,7 +92,7 @@ body.day .logo span {
 }
 
 nav {
-    position: relative;
+    position: sticky;
     margin-top: 10px;
 }
 
@@ -127,7 +138,6 @@ nav ul.active {
 }
 
 .hero-content {
-    font-family: "Architects Daughter", sans-serif;
     font-size: 3vh;
     margin-top: 35vh;
     position: relative;
@@ -238,16 +248,15 @@ body.day .hero-content > p {
 }
 
 @keyframes fadeInUp {
-    0% {
-      transform: translateY(100%);
-      opacity: 0;
+    from {
+        transform: translate3d(0, 40px, 0);
+        opacity: 0;
     }
-    100% {
-      transform: translateY(0%);
-      opacity: 1;
-      filter: blur(0);
+    to {
+        transform: translate3d(0, 0, 0);
+        opacity: 1;
     }
-  }
+}
   
 
 @keyframes fadeInLeft {
@@ -369,8 +378,9 @@ body.day .moon {
 }
 
 .hehe {
-    font-family: "Architects Daughter", sans-serif;
     font-size: 2.5vh;
+    font-family: "Architects Daughter", sans-serif;
+    font-weight: 400;
 }
 
 body.day .hehe {
@@ -937,4 +947,3 @@ body.day .sign-in:hover {
     position: relative;
     left: 50%;
 }
-
