--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 16px;
-    background-color: rgba(44,62,80,0.2);
     border-bottom: 2px solid var(--main-white);
     z-index: 10000;
 }
@@ -53,7 +52,7 @@ body > header {
 }
 
 body.night header {
-    background-color: rgba(44,62,80,0.9);
+    background-color: rgba(44,62,80,1);
     top: 0;
     position: sticky;
 }
@@ -111,6 +110,8 @@ nav ul {
 
 nav ul li {
     margin: 0 10px;
+    z-index: 9991;
+    background-color: transparent;
 }
 
 nav ul li a {
@@ -352,7 +353,7 @@ body.day .hehe > span {
 @media (max-width: 700px) {
     body.night nav ul {
         display: none;
-        background-color: var(--night-sky);
+        background-color: transparent;
         text-align: center;
         color: var(--night-sky);
         border-radius: 20px;
@@ -362,7 +363,6 @@ body.day .hehe > span {
         overflow: hidden;
         right: 0px;
         transform: translateX(15px);
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.09);
         z-index: 1;
     }
 
@@ -398,10 +398,8 @@ body.day .hehe > span {
     nav ul li a {
         display: block;
         text-decoration: none;
-        color: var(--main-blue);
         transition: 0.5s ease-in-out;
         position: relative;
-        box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
         margin: 0px 0px 20px 0px;
         width: 100%;
     }
@@ -499,7 +497,7 @@ body.night nav ul li a {
 
 body.day nav ul li a {
     background-color: rgba(167,214,220,0.75);
-    border-radius: 15px;
+    border-radius: 20px;
     color: var(--main-white);
 }
 
@@ -1049,7 +1047,7 @@ footer {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    background: var(--night-sky); 
+    background: var(--main-green); 
     z-index: 9999;
   }
   
@@ -1088,3 +1086,47 @@ footer {
     align-items: center;
 }
 
+.about-us {
+    background: url(images/aboutus.jpeg);
+    width: 100%;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+}
+
+.about-us:hover {
+    opacity: 0.4;
+}
+
+.about-us > .heading {
+    opacity: 1;
+    color: var(--moon-color);
+    padding: 70px;
+}
+
+.about-2 {
+    background-color: var(--main-green);
+    color: var(--main-white);
+    width: 100%;
+    overflow: hidden;
+    padding: 60px;
+    margin: 0;
+    border-top: 1px solid var(--main-white);
+    text-align: justify;
+}
+
+.links-div {
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Adjust as needed */
+}
+
+.footer-section {
+    flex: 1;
+}
+
+@media (min-width: 768px) {
+    .links-div {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
