--- a/styles.css
+++ b/styles.css
@@ -1145,3 +1145,60 @@ body h2::selection {
     background-color: black;
     color: var(--main-white);
 }
+
+.our-stories {
+    background: url(images/sky.jpeg);
+    width: 100%;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+}
+
+.our-stories:hover {
+    opacity: 0.4;
+}
+
+.our-stories > .heading {
+    opacity: 1;
+    color: var(--moon-color);
+    padding: 70px;
+}
+
+#scroll {
+    position:fixed;
+    right:10px;
+    bottom:10px;
+    cursor:pointer;
+    width:50px;
+    height:50px;
+    background-color:#3498db;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:60px
+}
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
+}
+#scroll:hover {
+    background-color:#e74c3c;
+    opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
+}
+
+.story-list {
+    padding: 60px;
+    margin: 0;
+    border-top: 1px solid var(--moon-color);
+    background-color: var(--night-sky);
+    color: var(--main-white);
+    text-align: justify;
+}
