--- a/styles.css
+++ b/styles.css
@@ -1265,13 +1265,14 @@ dialog {
   .back-to-top {
     color: var(--moon-color);
     background-color: var(--main-green);
-    border: 1px solid var(--moon-color);
+    border: 2px solid var(--moon-color);
     font-size: 2vh;
     border-radius: 50%;
     padding: 9px 16px 7px 16px;
     position: fixed;
     top: 85%;
     right: 5%;
+    font-size: 2vh;
     transition: 0.4s ease;
   }
 
