--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ nav ul.active {
     font-size: 3vh;
     margin-top: 35vh;
     position: relative;
-    z-index: 100;
+    z-index: 1000;
 }
 
 body.night .hero-content {
@@ -545,7 +545,7 @@ body.day nav ul {
     left: 0;
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    z-index: 101;
+    z-index: 100000;
     pointer-events: none;
 }
 
@@ -855,7 +855,7 @@ body.day .box {
     color: var(--moon-color);
     border: 2px solid var(--moon-color);
     border-radius: 15px;
-    padding: 10px 90px;
+    padding: 10px 110px;
     left: 50%;
     margin-top: 15px;
     font-family: "Anek Devanagari", sans-serif;
@@ -940,7 +940,7 @@ body.day .sign-in:hover {
 }
 
 .hero-content button {
-    width: 90%;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -1270,13 +1270,17 @@ dialog {
     border-radius: 50%;
     padding: 9px 16px 7px 16px;
     position: fixed;
-    top: 85%;
-    right: 5%;
+    top: 88%;
+    right: 8%;
     font-size: 2vh;
     transition: 0.4s ease;
   }
 
   .back-to-top:hover {
     background-color: var(--main-white);
-    color: #008000;
+    color: var(--main-green);
+  }
+
+  .navbar {
+    position: sticky;
   }
