--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
     --night-sky: #2c3e50;
     --moon-color: #f9f9f9;
 }
-
+/*Only Colors of the site*/
 * {
     scroll-behavior: smooth;
     margin: 0;
@@ -41,7 +41,6 @@ header {
     border-bottom: 2px solid var(--main-white);
     z-index: 10000;
 }
-
 
 html, body {
     overflow-x: hidden;
@@ -239,8 +238,6 @@ body.day .hero-content > p {
         opacity: 0;
     }
 }
-
-  
 
 .sun-moon-container {
     display: flex;
@@ -778,7 +775,6 @@ body.day .button-courses:hover {
     padding: 50px;
 }
 
-
 .course-list {
     background: linear-gradient(140deg, var(--main-green), var(--main-black)) ;
     border-top: 3px solid var(--moon-color);
@@ -787,7 +783,6 @@ body.day .button-courses:hover {
     text-align: justify;
     padding: 50px 60px;    
 }    
-
 
 body.day .course-list {
     background: white;
@@ -891,7 +886,6 @@ a:visited {
     max-width: 160%;
 }
 
-
 .box:hover {
     opacity: 0.7;
 }
@@ -963,7 +957,6 @@ body.day .sign-in:hover {
     position: relative;
     left: 50%;
 }
-
 
 .form-group {
     position: relative;
@@ -1107,8 +1100,6 @@ footer {
 .quick-links li a:hover {
     text-decoration: underline;
 }
-
-
 
 @keyframes pulse_animation {
     0% { 
@@ -1379,4 +1370,3 @@ nav:hover .menu-items-1 {
 .menu-icon-1 {
     color: var(--moon-color);
 }
-
