--- a/styles.css
+++ b/styles.css
@@ -619,7 +619,7 @@ nav:hover .menu-items-1 {
 
 .back-to-top {
     position: fixed;
-    top: 80%; /* Fixed position relative to the viewport */
+    top: 85%; /* Fixed position relative to the viewport */
     right: 8%;
     background-color: var(--main-green);
     border: 2px solid var(--moon-color);
@@ -983,6 +983,12 @@ nav:hover .menu-items-1 {
 
     .icons > li > a > i {
         padding: 15px;
+    }
+
+    .back-to-top {
+    position: fixed;
+    top: 85%; /* Fixed position relative to the viewport */
+    right: 1%;
     }
 }
 
